--- a/Views/Employee/Edit.cshtml
+++ b/Views/Employee/Edit.cshtml
@@ -5,7 +5,7 @@
 
 <h2>@ViewBag.Title Employee</h2>
 
-<form asp-action="@ViewBag.Action" id="employeeForm">
+<form asp-action="Edit" method="post" id="employeeForm">
     <div class="form-group">
         <label asp-for="Name"></label>
         <input asp-for="Name" class="form-control" />
